<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimEcar</string>
    <string name="action_settings">Settings</string>
    <string name="activity_cs_title">Add charging station</string>
    <string name="activity_about_title">About</string>
    <string name="activity_satistic_title">Statistics overview</string>
    <string name="warning_APIVersion">This feature is only visible for Android 4.2 Jelly Bean MR1 (API 17) or higher.</string>
	<string name="tripCons">Trip consumption:</string>    
    <string name="coveredDistance">Trip distance:</string>
    <string name="currentSpeed">Current speed:</string>
    <string name="speedApiTest">API Test Speed:</string>
    <string name="timeTo100">Time to 100%:</string>
    <string name="remainingKmOnBattery">Remaining distance on battery:</string>
    <string name="currentLocation">Location:</string>
    <string name="currentConsumption">Energy consumption:</string>
    <string name="time">Time</string>
    <string name="state">State:</string>
    <string name="gpsDisabled"></string>
    <string name="menu_preferences">Settings</string>
    <string name="backgroundInfo"><b>There are a number of techniques that can be used to reduce energy consumption.</b>\n\n
    <b>Accelerating lightly. </b>
    Acceleration is the strongest contributor to your vehicles energy consumption.      
    Try to avoid unnecessary acceleration by anticipating traffic.<br /> 
    During city driving, avoid complete stops at traffic ligths by letting the vehicle coast and accelerate smoothly at green lights.\n
    On the motorway maintant a constant speed for optimal efficiency.\n\n
    
	<b>Top speeds. </b>At 110 km/h, driving 20km/h faster consumes 25% for energy.\n\n
	 
    <b>Correct gear. </b>Shift up as soon as possible and avoid high engine speeds.\n\n
    
    <b>Auxiliary devices. </b>Auxiliary devices such as heating significantly increase energy consumption in electric vehicles.\n\n 
    
    <b>Excess weight. </b>The greater the vehicles mass, the higher the energy consumption.
    Avoid carrying unnecessary extra weight.\n\n
    
    <b>Vehicle maintenance. </b>Keep your vehicles in good maintenance and regurlarly check the tire pressure.\n\n    
    </string>
    

    <string-array name="drawer_options">
        <item>Dashboard</item>
<!-- 
        <item>State of charge</item>
        <item>Avg. consumption</item>
        <item>Drive possibility</item>
        <item>Drive distances</item>
        <item>Log</item>
        <item>Drive graph</item>
 -->        
        <item>EV Recommendation</item>
        <item>Eco-Driving</item>
        <item>Analysis</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="cs_name">Name:</string>
    <string name="cs_type">Charging station type:</string>
    <string name="cs_info">Create a charging station at your current location.</string>
    <string name="button_lable_cs_save">Save charging station</string>
    <string name="editText_hint">Name of charging station e.g. Home</string>

    <!-- Statistics -->
    <string name="avg_consumption_description">This report compares the average energy consumption of the current month with the previous ones.</string>
    <string name="drive_distances_description">This report visualises the number of closed drives, grouped by their length in kilometers.</string>
    <string name="drive_possiblity_description">This report visualises the amount of drives that were driveable, not driveable and drivable if at the beginning of the trip the battery would have been fully charged.</string>
    <string name="soc_description">This report visualises the battery state of charge in percent.</string>
    <string name="zerokWh">0 kWh</string>
    <string name="firstVehicleRec">"<b>Based on your driving profile, the following vehicle is recommended:</b>"</string>
    <string name="secondVehicleRec1">\n<b>If you use a different vehicle for N_TRIPS trip(s), the following vehicle will become feasible:</b>\n</string>
    <string name="WhichTripsAreCritical"><u>Which trips are critical?</u></string>
    <string name="technique_good">"You are doing well on the following eco-driving techniques: "</string>
    <string name="improve_on">"You could improve on the following: "</string>
    <string name="secondVehicleRec2">\n<b>If you improve your consumption by PERCENT% the following vehicle will become feasible for you:\n</b></string>
    <string name="howCanIimproveMyConsumption"><u>How can I improve my consumption?</u></string>
    <string name="goalAchievementLbl">"Goal achievement: "</string>
    <string name="currentGoal">"Current goal (kWh/100km): "</string>
    <string name="setNewGoal">"Set new goal (kWh/100km): "</string>
	<string name="speed_description">"This report shows the speed over the course of the trip."</string>
	<string name="acceleration_description">"This report shows the acceleration over the course of the trip."</string>
	
	<string name="avgCons">"Avg. Consumption:"</string>
    
</resources>
