<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:paddingLeft="16dp"
	android:paddingRight="16dp" >

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" >

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:orientation="horizontal" >

			<!-- Always visible TextViews: Charching Level & Car State -->
			<TextView
				android:id="@+id/textview_text_current_charginglvl"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"
				android:text="000"
				android:textSize="35pt"
				tools:ignore="HardcodedText" />

			<TextView
				android:id="@+id/textview_label_current_charginglvl"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"
				android:text="%"
				android:textSize="20pt"
				tools:ignore="HardcodedText" />
		</LinearLayout>

		<TextView
			android:id="@+id/textview_label_state"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/state"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/textview_text_state"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingBottom="10dp"
			android:paddingLeft="15dp" />

		<!-- TextViews visible when Car State = driving -->
		<TextView
			android:id="@+id/textView_label_currentConsumption"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/currentConsumption"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/textview_text_currentConsumption"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingBottom="10dp"
			android:paddingLeft="15dp" />

		<TextView
			android:id="@+id/textView_label_currentSpeed"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/currentSpeed"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/textview_text_currentSpeed"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingBottom="10dp"
			android:paddingLeft="15dp" />

		<TextView
			android:id="@+id/textView_label_coveredDistance"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/coveredDistance"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/textview_text_coveredDistance"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingBottom="10dp"
			android:paddingLeft="15dp" />
		
		<TextView
			android:id="@+id/textView_label_remainingTimeOnBattery"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/remainingTimeOnBattery"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/textview_text_remainingTimeOnBattery"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingBottom="10dp"
			android:paddingLeft="15dp" />

		<!-- Test TextViews -->
		<TextView
			android:id="@+id/textView_label_speedApiTest"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/speedApiTest"
			android:textStyle="bold"
			android:visibility="gone" />

		<TextView
			android:id="@+id/textview_text_speedApiTest"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingBottom="10dp"
			android:paddingLeft="15dp"
			android:visibility="gone" />

		<TextView
			android:id="@+id/textView_label_location"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/currentLocation"
			android:textStyle="bold"
			android:visibility="gone" />

		<TextView
			android:id="@+id/textview_text_location"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingBottom="10dp"
			android:paddingLeft="15dp"
			android:visibility="gone" />
		
		<!-- TextViews visible when Car State = charching -->

		<TextView
		    android:id="@+id/textView_label_timeTo100"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/timeTo100"
		    android:textStyle="bold" />

		<TextView
			android:id="@+id/textview_text_timeTo100"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingBottom="10dp"
			android:paddingLeft="15dp" />
		

		
		<!-- TextViews to debug -->
		<TextView
			android:id="@+id/debug1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="#009900"
			/>

		<TextView
			android:id="@+id/textview_text_GPSDisabled"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingBottom="10dp"
			android:text="@string/gpsDisabled"
			android:textColor="#d32424"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/debug2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="#009900"
			/>
		
		<TextView
		    android:id="@+id/debug3"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textColor="#009900"/>
		
	<!-- TextView visible when GPS Disabled -->
		
	</LinearLayout>

</ScrollView>