<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFCCAA"
    android:id="@+id/scrollView1"
    android:paddingLeft="2dp"
    android:paddingRight="2dp" >

    <!-- root layout vertical -->

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >

	    <!-- progess bar + text layout horizontal -->

		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >

		    <ProgressBar
		        android:id="@+id/progressBar1"
		        style="@android:style/Widget.ProgressBar.Horizontal"
		        android:layout_width="0dp"
		        android:layout_height="38dp"
		        android:layout_gravity="center_vertical"
		        android:layout_weight="2.08"
		        android:paddingTop="3dp"
		        android:max="100"
		        android:progress="34" />

		    <!-- 0% + 136km layout vertical -->

		    <LinearLayout
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent"
		        android:orientation="vertical" >

		        <!-- "0" + "%" layout vertical -->

		        <LinearLayout
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:orientation="horizontal" >

		            <TextView
		                android:id="@+id/textview_text_current_charginglvl"
		                android:layout_width="46dp"
		                android:layout_height="wrap_content"
		                android:layout_gravity="center_vertical"
		                android:layout_marginLeft="5dp"
		                android:text="0"
		                android:textSize="@dimen/activity_horizontal_margin"
		                tools:ignore="HardcodedText" />

		            <TextView
		                android:id="@+id/textview_label_current_charginglvl"
		                android:layout_width="41dp"
		                android:layout_height="wrap_content"
		                android:layout_gravity="center_vertical"
		                android:layout_marginLeft="5dp"
		                android:text="%"
		                android:textSize="@dimen/activity_horizontal_margin"
		                tools:ignore="HardcodedText" />
		        </LinearLayout>

		        <TextView
		            android:id="@+id/textview_text_remainingTimeOnBattery"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center_vertical"
		            android:paddingBottom="10dp"
		            android:paddingLeft="15dp"
		            android:text="0 km"
		            tools:ignore="HardcodedText" />
		    </LinearLayout>

		    <!-- END progess bar + text layout horizontal -->
		</LinearLayout>

		<TextView
		    android:id="@+id/textview_text_currentConsumption"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:layout_marginLeft="5dp"
		    android:text="@string/zerokWh"
		    android:textSize="35pt"
		    tools:ignore="HardcodedText" />

		<TextView
			android:id="@+id/textview_label_state"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/state"
			android:textStyle="bold" 
			android:visibility="invisible" />

		<TextView
			android:id="@+id/textview_text_state"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingBottom="10dp"
			android:paddingLeft="15dp" />

		<!-- TextViews visible when Car State = driving -->

		<TextView
		    android:id="@+id/textView_label_currentSpeed"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/currentSpeed"
		    android:textStyle="bold"
		    android:visibility="invisible" />

		<TextView
			android:id="@+id/textview_text_currentSpeed"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingBottom="10dp"
			android:paddingLeft="15dp" />

		<TextView
		    android:id="@+id/textView_label_remainingTimeOnBattery"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/remainingTimeOnBattery"
		    android:textStyle="bold"
		    android:visibility="invisible" />

		<TextView
		    android:id="@+id/textView_label_coveredDistance"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/coveredDistance"
		    android:textStyle="bold"
		    android:visibility="invisible" />

		<TextView
			android:id="@+id/textview_text_coveredDistance"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingBottom="10dp"
			android:paddingLeft="15dp" />

		<TextView
		    android:id="@+id/textView_label_timeTo100"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/timeTo100"
		    android:textStyle="bold" />



		<!-- Test TextViews -->
		<TextView
			android:id="@+id/textView_label_speedApiTest"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/speedApiTest"
			android:textStyle="bold"
			android:visibility="gone" />

		<TextView
			android:id="@+id/textview_text_speedApiTest"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingBottom="10dp"
			android:paddingLeft="15dp"
			android:visibility="gone" />

		<TextView
			android:id="@+id/textView_label_location"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/currentLocation"
			android:textStyle="bold"
			android:visibility="gone" />

		<TextView
			android:id="@+id/textview_text_location"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingBottom="10dp"
			android:paddingLeft="15dp"
			android:visibility="gone" />
		
		<!-- TextViews visible when Car State = charching -->

		<TextView
			android:id="@+id/textview_text_timeTo100"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingBottom="10dp"
			android:paddingLeft="15dp" />
		

		
		<!-- TextViews to debug -->
		<TextView
			android:id="@+id/debug1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="22pt"
			/>

		<TextView
			android:id="@+id/textview_text_GPSDisabled"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingBottom="10dp"
			android:text="@string/gpsDisabled"
			android:textColor="#d32424"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/debug2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
		
		<TextView
		    android:id="@+id/debug3"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    />
		
	<!-- TextView visible when GPS Disabled -->
		
	</LinearLayout>

</ScrollView>